# testomat_tests_python

./: .gitignore  README.md  pyproject.toml  pytest.ini  requirements.txt  todo.md
src/: __init__.py
src/api/: __init__.py  client.py
src/api/models/: __init__.py  project.py
src/data_type_experiments/: numbers_exp.py  string_exp.py
src/web/: __init__.py  application.py
src/web/components/: ProjectCard.py  ProjectsPageHeader.py  SideBar.py  __init__.py  project_card.py  projects_page_header.py  side_bar.py  test_for_suite_popup.py  test_modal.py
src/web/pages/: LoginPage.py  NewProjectsPage.py  ProjectPage.py  ProjectsPage.py  RunsPage.py  __init__.py  base_page.py  home_page.py  login_page.py  new_projects_page.py  project_page.py  projects_page.py
src/web/selenium/core/: __init__.py  base_page.py  waits.py
src/web/selenium/pages/: __init__.py  login_page.py  login_page_v2.py
tests/: conftest.py  first_test.py
tests/api/: projects_test.py
tests/fixtures/: api.py  app.py  config.py  cookie_helper.py  selenium.py
tests/web/: cookies_test.py  login_page_test.py  manage_projects_tests.py  new_page_tests.py  project_creation_tests.py  projects_page_test.py  switch_company_test.py
tests/web/enterprise_plan_tests/: project_creation_tests.py  projects_page_test.py  switch_company_test.py
tests/web/free_proj/: free_proj_test.py
tests/web/selenium/: simple_test_via_selnium.py
