[project]
name = "testomat-tests"
version = "0.1.0"
description = "Playwright-based E2E testing framework for Testomat application"
requires-python = ">=3.14"
dependencies = [
    "faker>=37.12.0",
    "pytest>=8.4.2",
    "pytest-html>=4.1.1",
    "python-dotenv>=1.2.1",
    "playwright>=1.55.0",
]

[dependency-groups]
dev = [
    "ruff>=0.14.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/web"]

[tool.pytest.ini_options]
minversion = "8.0"
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py", "*_tests.py"]
python_functions = ["test_*"]
norecursedirs = [".git", ".venv", ".claude", ".idea", "__pycache__", "build", "dist"]
addopts = [
    "-v",
    "-ra",
    "--strict-markers",
    "--tb=short",
    "--html=test-result/report.html",
    "--self-contained-html",
]
markers = [
    "smoke: Quick smoke tests for basic functionality",
    "regression: Full regression test suite",
    "web: Web UI tests using Playwright",
    "slow: Tests that take longer to execute",
]
console_output_style = "progress"
log_cli = true
log_cli_level = "INFO"
log_cli_format = "%(asctime)s [%(levelname)s] %(message)s"
log_cli_date_format = "%Y-%m-%d %H:%M:%S"
xfail_strict = true

[tool.ruff]
target-version = "py314"
line-length = 120
exclude = [
    ".git",
    ".venv",
    "__pycache__",
    "test-result",
]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # Pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
    "SIM", # flake8-simplify
    "RUF", # Ruff-specific rules
]
ignore = [
    "E501", # line too long (handled by formatter)
    "B008", # do not perform function calls in argument defaults (needed for fixtures)
]
fixable = ["ALL"]
unfixable = []

[tool.ruff.lint.isort]
known-first-party = ["src", "tests"]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["B011"]  # Allow assert in tests

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"
